# langchain_memory_demo

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  model.py  state.py
src/agent/memory/: __init__.py  long_memory.py  short_memory.py
